# myfans-client

./: README.md  pyproject.toml  run.py
.github/workflows/: unittest.yml
myfans_client/: client.py
